--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -6,7 +6,9 @@
 <center><h2 class="sidrubrik">Frågor och svar</h2></center>
 
 <div class="maincontainer1">
-   <div class=" maincontainer">
+    <br />
+    <br />
+   <div class=" maincontainer" style=" margin-left: 40px; margin-right: 40px;">
 
         <div class="row">
             <div class="col-sm-3">
@@ -25,7 +27,7 @@
 
         <br />
         <br />
-        <legend>För våra hyresgäster</legend>
+       <legend style="color:#e93523">För våra hyresgäster</legend>
         <div class="panel-group col-md-6" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -381,38 +383,38 @@
                 </div>
             </div>
         </div>
-        <legend>För kommande hyresgäster</legend>
+       <legend style="color:#e93523">För kommande hyresgäster</legend>
 
-        <div class="panel-group fragor" id="accordion">
-            
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse24">Bostadskön</a>
-                    </h4>
-                </div>
-                <div id="collapse24" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        texttexthökn ljkl
-                    </div>
-                </div>
-            </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse25">Intresseanmälan</a>
-                        </h4>
-                    </div>
-                    <div id="collapse25" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            Vattnet i vattenlåsen avdunstar och då uppstår en obehaglig avloppslukt. Be en
-                            granne eller vän att spola i handfat, badkar och wc när du är borta en längre tid, så
-                            slipper du problemet.
-                        </div>
-                    </div>
-                </div>
-        
-        </div>
+       <div class="panel-group fragor" id="accordion" style="max-width:520px;">
+
+           <div class="panel panel-default">
+               <div class="panel-heading">
+                   <h4 class="panel-title">
+                       <a data-toggle="collapse" data-parent="#accordion" href="#collapse24">Bostadskön</a>
+                   </h4>
+               </div>
+               <div id="collapse24" class="panel-collapse collapse">
+                   <div class="panel-body">
+                       texttexthökn ljkl
+                   </div>
+               </div>
+           </div>
+           <div class="panel panel-default">
+               <div class="panel-heading">
+                   <h4 class="panel-title">
+                       <a data-toggle="collapse" data-parent="#accordion" href="#collapse25">Intresseanmälan</a>
+                   </h4>
+               </div>
+               <div id="collapse25" class="panel-collapse collapse">
+                   <div class="panel-body">
+                       Vattnet i vattenlåsen avdunstar och då uppstår en obehaglig avloppslukt. Be en
+                       granne eller vän att spola i handfat, badkar och wc när du är borta en längre tid, så
+                       slipper du problemet.
+                   </div>
+               </div>
+           </div>
+
+       </div>
     </div>
 </div>
 
