--- a/design/design/Views/Home/LedigaObjekt.cshtml
+++ b/design/design/Views/Home/LedigaObjekt.cshtml
@@ -93,7 +93,7 @@
     <br />
     <br />
 
-    <legend>3 lediga objekt</legend>
+    <legend style="color:#e93523">3 lediga objekt</legend>
     <div class=" ledigt">
     
         <div class="row ledig">
@@ -119,9 +119,9 @@
             </div>
 
             <div class="col-sm-3 lastdiv">
-                <button type="submit" class="btn btn-default btn-information1">Intresseanmälan <span class="glyphicon glyphicon-chevron-right"></span></button><br />
-                <button type="submit" class="btn btn-default btn-information">Mer information <span class="glyphicon glyphicon-chevron-right"></span></button>
-            </div>
+                <a href="~/Home/Intresseanmalan2" type="submit" class="btn btn-default btn-information1">Intresseanmälan <span class="glyphicon glyphicon-chevron-right"></span></a><br />
+                <a href="~/Home/InfoObjekt" type="submit" class="btn btn-default btn-information">Mer information <span class="glyphicon glyphicon-chevron-right"></span></a>
+</div>
         </div>
         <br />
         <hr size="1" color="#996633">
