--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -59,7 +59,7 @@
                 <br />
                 <br />
                 <br />
-                <legend>3 Fastigheter</legend>
+                <legend style="color:#e93523">3 Fastigheter</legend>
                 <div class="row divfastigheter3 objekt">
                     
                     <div class="col-md-4">
