--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -98,7 +98,7 @@
                     </div>
 
                <div>
-                   <h3>Bra länkar för dig som student</h3>
+                   <h3>Bra länkar för dig som är student</h3>
                    <h5>
                        <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys</a><br />
                        <a href="http://bibliotek.orebro.se/">Stadsbiblioteket</a><br />
