--- a/design/design/Views/Home/InfoObjekt.cshtml
+++ b/design/design/Views/Home/InfoObjekt.cshtml
@@ -4,28 +4,93 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>InfoObjekt</h2>
+<h2 class="sidrubrik">Information</h2>
 <div class=" maincontainer1">
-
-    <div class=" row">
-        <div class=" col-md-3">
-            Lägenhetsinfo
+    <a class="link" href="~/Home/LedigaObjekt"><< Lediga objekt</a>
+    <center><h1>Rynningegatan 27</h1></center>
+    <br />
+    <div class=" row information info1">
+        <div class="col-md-2">
+            <div>
+                <p>
+                    <b>Område:</b> Örebro Norr <br />
+                    <b>Inflytt:</b> 2017-06-01<br />
+                    <b>Typ:</b> Lägenhet<br />
+                    <b>Antal rum:</b> 3
+                    <br /><b>Hyra:</b> 7000 kr/månad
+                    <br /><b>Yta:</b> 83 kvm
+                    <br /><b>Våning:</b> 3
+                    <br /><b>Övrigt:</b> Balkong
+                    <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                </p>
+            </div>
+            
         </div>
-        <div class="col-md-3 ">
-            Info övrigt om lägenheten
+        <div class="col-md-5 ">
+            
+            <div>
+                
+                <p><span style="font-size:x-large;">Övrig information</span><br /> Standard: Parkettgolv, kaklat badrum, handdukstork, tvättmaskin, torktumlare, diskmaskin, mikrovågsugn, balkong. Hiss finns.Inflytt 1 juli 2017. För intresseanmälan - se här nedan.</p>
+            </div>
         </div> 
-        <div class=" col-md-4">
-            Bilder på lägenheter
-        </div> 
+        <div class=" col-md-5">
+            <div class="mainbody">
+                <div id="myCarousel1" class="carousel slide" data-interval="false">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li class="item1 active"></li>
+                        <li class="item2"></li>
+                        <li class="item3"></li>
+                        <li class="item4"></li>
+                        <li class="item5"></li>
+                    </ol>
 
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Chania">
+                        </div>
+
+                        <div class="item">
+                            <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Chania">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
+                        </div>
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="carousel-control right" href="#myCarousel1" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+                </div>
+            </div>
+        </div> 
+       
     </div>
-    <div class=" row">
+
+    <br />
+    <div class=" row information">
        
         <div class="col-md-3 ">
-            Info om området
+            <p><span style="font-size:large;">Örebro</span><br /> <span style="font-size:small;">Örebro är befolkningsmässigt landets sjunde största kommun. Här bor cirka 137 000 personer på en yta av 1 380,1 km2 (landareal). I kommunen finns invånare från cirka 150 olika länder. Själva staden Örebro är drygt 700 år gammal. Slottet började byggas redan på 1200-talet. I dag finns bland annat restaurang, olika konferenslokaler och landshövdingens bostad i Örebro slott.</span></p>
         </div>
         <div class="col-md-3 ">
-            Info om Örebro
+            <p><span style="font-size:large;">Norr</span><br /> <span style="font-size:small;">Norr är en stadsdel i Örebro som ligger norr om centrum. Stadsdelen sträcker sig från Norra Grev Rosengatan i söder, till Hagaby och vattentornet Svampen i norr. Det gränsar till Rynninge, Ringstorp och Pettersberg i öster, och till järnvägen Örebro-Frövi i väster.</span></p>
+        </div>
+        <div class="col-md-6">
+            <a href="~/Home/Intresseanmalan2" type="submit" class="btn btn-default btn-lg intresse">Intresseanmälan</a>
+            
+            
         </div>
     </div>
 
