--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -95,9 +95,9 @@
     <hr />
     <div class=" rubrik" style="margin-left: 55px; ">
         <h3>Senaste nytt</h3>
-
+    </div>
         <br />
-        <div class="nyhet" style="text-align: center; margin-right: 5%;">
+        <div class="nyhet" style="text-align: center; margin-left: 5%; max-width: 750px">
             <h2>Glad påsk!</h2>
             <p style="text-align:left;">
                 Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
@@ -114,10 +114,10 @@
             </p>
             <p style="text-align:right;">2017-04-12</p>
         </div>
-        <a class="link" href="~/Home/Nyheter">Se fler nyheter >></a>
+    <a class="link" href="~/Home/Nyheter" style="margin-left:5%;" >Se fler nyheter >></a>
       
             
-</div>
+
     </div>
  
  
