--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -12,13 +12,17 @@
 <body>
     <div class="container">
          
-      <div class="headern">
-          <div class="row header1" style="background-color: white;">
-              <div class="col-md-2"><img src="~/Content/Images/JEbygg%20logga.png"></div>
-              <div class="col-md-10">
-                  <img src="~/Content/Images/headerje1.png" style="width:100%;">
-              </div>
-          </div>
+      <div class="headern"><center>
+    <div class="row header1" style="background-color: white;">
+
+        <div class="col-md-10 rightimage">
+            <img src="~/Content/Images/headerje1.png" style="width:100%;">
+        </div>
+
+        <div class="col-md-2 leftimage"><a href="~/Home/Index"><img src="~/Content/Images/JEbygg%20logga.png"></a></div>
+
+    </div>
+</center>
                 </div>
         
       
