--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -21,24 +21,23 @@
 
         <div class="row">
         <div class="col-sm-4 omoss">
-            <h3>Studentboende</h3>
+            <h3>Vår vision</h3>
             <p>Lorem ipsum dolor..</p>
-            <a href="~/Home/studentboende">Läs mer om studentboende</a>
+           
+
           
         </div>
         <div class="col-sm-4 omoss">
-            <h3>Seniorboende 55+ Nära till</h3>
-            <p>Vi hoppas att ditt besök på vår hemsida ska ge dig en bra bild av vad du kan vänta dig av att bo i en av våra lägenheter.
-               Hos oss på Nära Till blir livet lite enklare och trevligare. Närheten till andra seniorer, ett rikt utbud av aktiviteter, gemensamhetslokal och vår hjälpsamma värdinna gör att det är lätt att trivas.</p>
-
-            <a href="~/Home/seriorboende">Läs mer om seniorboende</a>
+            <h3>Vår affärsidé</h3>
+            <p>info info info</p>
+             
             
         </div>
         <div class="col-sm-4 omoss">
             <h3>EP-Fastigheter</h3>
             <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
             
-            <a href="http://www.epfastigheter.se/">Läs mer på EP-fastigeheters egen hemsida</a>
+            <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
         </div>
     </div>
 </div>
