Logga på den andra bilden

--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             <img src="~/Content/Images/headerje1.png" style="width:100%;">
         </div>
 
-        <div class="col-md-2 leftimage"><a href="~/Home/Index"><img src="~/Content/Images/JEbygg%20logga.png"></a></div>
+        <div class="col-md-2 leftimage"><a href="~/Home/Index"><img src="~/Content/Images/transparent.png"></a></div>
 
     </div>
 </center>
