--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -12,17 +12,20 @@
 <body>
     <div class="container">
          
-      <div class="headern"><center>
-    <div class="row header1" style="background-color: white;">
-
-        <div class="col-md-10 rightimage">
-            <img src="~/Content/Images/headerje1.png" style="width:100%;">
-        </div>
-
-        <div class="col-md-2 leftimage"><a href="~/Home/Index"><img src="~/Content/Images/transparent.png"></a></div>
+      <div class="headern">
+    <div class="row header1" style="background-color: white; text-align:center;">
+       
+            <div class="col-md-10 rightimage">
+                <center>
+                    <img src="~/Content/Images/headerje1.png" style="width:100%;">
+                    <a class="leftimage" href="~/Home/Index"><img class="img-responsive" src="~/Content/Images/transparent.png"></a>
+                </center>
+</div>
+        
+        @*<div class="col-md-2 leftimage"></div>*@
 
     </div>
-</center>
+
                 </div>
         
       
