--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -7125,8 +7125,8 @@ top: 15%;
 position: absolute;
 }
 div.rightimage{
-    margin-left: 7%;
-    margin-right: 7%;
+    /*margin-left: 7%;
+    margin-right: 7%;*/
 }
 /*div.foretag{
     display: none;
