--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
       <div class="headern">
     <div class="row header1" style="background-color: white; text-align:center;">
        
-            <div class="col-md-10 rightimage">
+            <div class="rightimage">
                 <center>
                     <img src="~/Content/Images/headerje1.png" style="width:100%;">
                     <a class="leftimage" href="~/Home/Index"><img class="img-responsive" src="~/Content/Images/transparent.png"></a>
