kontakt: tagit bort kontaktformulär, lagt till de personer som skulle in, tagit bort gabriel, lagt till bild för de "anonyma"

--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -112,6 +112,13 @@
                         070 - 410 40 11
                     </p>
                 </div>
+                <div class="col-sm-3">
+                    <center><img class="img-responsive" src="~/Content/Images/anonym2.jpg" alt=""></center>
+                    <h4>Adis</h4>
+                    <p>
+                        Ekonomiassistent
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -162,139 +169,31 @@
             <h4>Örjan Åkerstrand</h4>
         </div>
         <div class="col-sm-3">
-            <center><img class="img-responsive" src="~/Content/Images/LiljaGabriel.jpg" alt=""></center>
-            <h4>Gabriel Lilja</h4>
+            <center><img class="img-responsive" src="~/Content/Images/anonym2.jpg" alt=""></center>
+            <h4>Richard Gustafsson</h4>
         </div>
         <div class="col-sm-3">
             <center><img class="img-responsive" src="~/Content/Images/StenArnsheml.png" alt=""></center>
             <h4>Sten Arnsheml</h4>
         </div>
+        <div class="col-sm-3">
+            <center><img class="img-responsive" src="~/Content/Images/anonym2.jpg" alt=""></center>
+            <h4>Mikael Sabri</h4>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-sm-3">
+            <center><img class="img-responsive" src="~/Content/Images/anonym2.jpg" alt=""></center>
+            <h4>Britt-Marie Jansson</h4>
+        </div>
+        
 
     </div>
 
-    <br />
-    <br />
-
-    <div class="maincontainer">
-
-        <form class="well form-horizontal" action=" " method="post" id="contact_form">
-            <fieldset>
-
-                <!-- Form Name -->
-                <legend>Kontakta oss idag!</legend>
-
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Namn</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input name="first_name" placeholder="Namn" class="form-control" type="text">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label">E-postadress</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input name="email" placeholder="E-postadress" class="form-control" type="text">
-                        </div>
-                    </div>
-                </div>
-
-
-                <!-- Text input-->
-
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Telefonnummer</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                            <input name="phone" placeholder="Telefonnummer" class="form-control" type="text">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Text input-->
-
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Adress</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                            <input name="address" placeholder="Adress" class="form-control" type="text">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Text input-->
-
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Postnr</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                            <input name="city" placeholder="Postnr" class="form-control" type="text">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Text input-->
-
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Postort</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                            <input name="city" placeholder="Postort" class="form-control" type="text">
-                        </div>
-                    </div>
-                </div>
-                <!-- Select Basic -->
-
-                @*<div class="form-group">
-                    <label class="col-md-4 control-label">Postort</label>
-                    <div class="col-md-4 selectContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-home"></i>
-                            </span><br />
-                            <input name="state" placeholder="Postort" class="form-control" type="text">
-
-                        </div>
-                    </div>
-                </div>*@
-
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Meddelande</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                            <textarea class="form-control" name="comment" placeholder="Meddelande"></textarea>
-                        </div>
-                    </div>
-                </div>
-
-
-                <!-- Success message -->
-                <div class="alert alert-success" role="alert" id="success_message">Tack <i class="glyphicon glyphicon-thumbs-up"></i> Ditt meddelande har skickats.</div>
-
-                <!-- Button -->
-                <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4">
-                        <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
-                    </div>
-                </div>
-
-            </fieldset>
-        </form>
+    
     </div>
-    </div>
-    <!-- /.container -->
+    
 
 
 
