fixat lite med frågorna

--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -47,6 +47,18 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse26">Antenn/Parabol</a>
+                    </h4>
+                </div>
+                <div id="collapse26" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        Det är inte tillåtet att sätta upp en parabol/antenn på balkong eller fasaden.
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Badrummet luktar illa efter resa</a>
                     </h4>
                 </div>
@@ -379,6 +391,18 @@
                     <div class="panel-body">
                         Din kompis kan naturligtvis lämna in en intresseanmälan men då vi har många sökande kan
                         vi inte garantera att det är just din kompis som får lägenheten. Bostadsanmälan
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse27">Överlåtande av lägenhet</a>
+                    </h4>
+                </div>
+                <div id="collapse27" class="panel-collapse collapse">
+                    <div class="panel-body">
+                       Till familjemedlem osv
                     </div>
                 </div>
             </div>
