--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -82,7 +82,7 @@
               
             </div>
         <div class="col-md-4 facebook">
-            <p style="font-family: Tahoma; background-color: #e4e4e4; border-radius: 10px; box-shadow: 0px 0px 20px white; padding-left: 10px;">
+            <p style="font-family: Tahoma; border-radius: 10px; box-shadow: 0px 0px 20px white; padding-left: 10px;">
                 Genom att gilla vår Facebooksida kan du hålla dig uppdaterad om vad som händer hos oss på John Ekströms Bygg AB.
                 Lediga objekt och information till våra hyresgäster läggs ut på vår Facebooksida.
             </p>
