--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -6963,7 +6963,7 @@ div.facebook{
     border-radius: 10px;
     margin-top: 20px;
     margin-left: 35px;
-   background-color: rgba(119, 119, 119, 0.39);
+   background-color: white;
     border: 1px solid #ccc;
     box-shadow: 0px 5px 8px #333;
 }
