fixat lite i våra fastigheter

--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -26,33 +26,30 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Falun</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kumla</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nora</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Almby</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Väster</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Norr</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Centralt</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Studentboende</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Senior 55+</a></li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <p>Sök på adress</p>
-                    <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
-                            Adress
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Badhusgatan</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kungsgatan</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Skolgatan</a></li>
-
-                        </ul>
+                    
+                        <div class="col-sm-4">
+                            <div id="imaginary_container">
+                                <div class="input-group stylish-input-group">
+                                    <input type="text" class="form-control" placeholder="Search">
+                                    <span class="input-group-addon">
+                                        <button type="submit">
+                                            <span class="glyphicon glyphicon-search"></span>
+                                        </button>
+                                    </span>
+                                </div>
+                            </div>
+                        
                     </div>
                 </div>
 
