flyttat menyn i våra fastigheter till höger och gjort sökrutan större

--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -9,13 +9,7 @@
     <div class="maincontainer row">
         
         <div class="row">
-            <div class=" col-md-3 divfastigheter" >
-                <div>
-                <p><b>Läs mer om våra fastigheter</b></p>
-                <a class="link" href="~/Home/studentboende" style="text-align:left">Studentboende</a><br /><br />
-                <a class="link" href="~/Home/seriorboende"  style="text-align:left">Seniorboende 55+</a><br />
-            </div>
-            </div>
+       
 
             <div class=" col-md-8 divfastigheter2">
                 <div class="col-sm-4 divleft2">
@@ -38,8 +32,8 @@
                 <div class="col-sm-4">
                     <p>Sök på adress</p>
                     
-                        <div class="col-sm-4">
-                            <div id="imaginary_container">
+                        
+                            <div id="imaginary_container" style="width:200px;">
                                 <div class="input-group stylish-input-group">
                                     <input type="text" class="form-control" placeholder="Search">
                                     <span class="input-group-addon">
@@ -50,7 +44,7 @@
                                 </div>
                             </div>
                         
-                    </div>
+                 
                 </div>
 
                 <br />
@@ -135,6 +129,13 @@
                         </div>
 
                     </div>
+                </div>
+            </div>
+            <div class=" col-md-3 divfastigheter">
+                <div>
+                    <p><b>Läs mer om våra fastigheter</b></p>
+                    <a class="link" href="~/Home/studentboende" style="text-align:left">Studentboende</a><br /><br />
+                    <a class="link" href="~/Home/seriorboende" style="text-align:left">Seniorboende 55+</a><br />
                 </div>
             </div>
         </div>
