--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -19,25 +19,12 @@
 <div class="maincontainer1">
     <br />
     <br />
-    <div class="col-lg-12">
-        <p style="font-size:x-large; text-align:center;">
-            Att hyra din bostad är en grym boendeform som ger dig <span style="color: #e93523">trygghet</span>, <span style="color: #e93523">frihet</span> och <span style="color: #e93523">service</span>!
-        </p>
-<br />
-        <br />
-    </div>
+
     <div class="row">
-        <div class="col-md-6 förstadiven">
-            <div class="col-md-12">
-    <h2 style="text-align: left; color: #e93523">Varför ska man hyra av oss?</h2>
-    <div>
-        <p>Vi har ägande, skötsel och drift i egen regi.</p>
-        <p>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
-        <br />
-        <br />
-    </div>
-</div>
-            <div class="col-md-12 mainbody" >
+        <div class="col-md-6" style="margin-left:30px;">
+          
+            <div class="mainbody">
+                <h2 style="text-align: center; color: #e93523">För folk som tycker om att bo!</h2>
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -77,45 +64,64 @@
                     </a>
                 </div>
             </div>
+            <a class="link" href="~/Home/Varafastigheter" style="margin-left:5%;">Våra fastigheter >></a>
 
-            <h2 style="text-align: center; color: #e93523">För folk som tycker om att bo!</h2>
-              
+
+        </div>
+        <div class="col-md-5">
+            <div>
+                <h2 style="text-align: left; color: #e93523">Varför ska man hyra av oss?</h2>
+                <div>
+                    <p><b>Vi har ägande, skötsel och drift i egen regi.</b></p>
+                    <p><b>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</b></p>
+                    <br />
+                    <br />
+                </div>
             </div>
-        <div class="col-md-4 facebook">
-            <p style="font-family: Tahoma; border-radius: 10px; box-shadow: 0px 0px 20px white; padding-left: 10px;">
-                Genom att gilla vår Facebooksida kan du hålla dig uppdaterad om vad som händer hos oss på John Ekströms Bygg AB.
-                Lediga objekt och information till våra hyresgäster läggs ut på vår Facebooksida.
+            <br />
+            <br />
+            <p style="font-size:x-large; text-align:center;">
+                Att hyra din bostad är en grym boendeform som ger dig <span style="color: #e93523">trygghet</span>, <span style="color: #e93523">frihet</span> och <span style="color: #e93523">service</span>!
             </p>
             <br />
-                <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
-            </div>
+            <br />
+        </div>
         </div>
     <br />
     <br />
     <hr />
-    <div class=" rubrik" style="margin-left: 55px; ">
-        <h3>Senaste nytt</h3>
-    </div>
-        <br />
-        <div class="nyhet" style="text-align: center; margin-left: 5%; max-width: 750px">
-            <h2>Glad påsk!</h2>
-            <p style="text-align:left;">
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-
-                <br />
-                <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-            </p>
-            <p style="text-align:right;">2017-04-12</p>
+    <div class=" row">
+        <div class=" rubrik" style="margin-left: 55px; ">
+            <h3>Senaste nytt</h3>
         </div>
-    <a class="link" href="~/Home/Nyheter" style="margin-left:5%;" >Se fler nyheter >></a>
-      
+        <br />
+        <div class=" col-md-7">
+            <div class="nyhet " style="text-align: center; margin-left: 5%; max-width: 750px">
+                <h2>Glad påsk!</h2>
+                <p style="text-align:left;">
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+
+                    <br />
+                    <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                </p>
+                <p style="text-align:right;">2017-04-12</p>
+            </div>
+            <a class="link" href="~/Home/Nyheter" style="margin-left:5%;">Se fler nyheter >></a>
+        </div>
+        <div class="col-md-4 facebook">
+            <h3 style="text-align: center; color: #e93523">Gilla oss på Facebook.</h3>
+            <br />
+            <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
+        </div>
+        
+    </div>
             
 
     </div>
