--- a/design/design/Views/Home/InfoObjekt.cshtml
+++ b/design/design/Views/Home/InfoObjekt.cshtml
@@ -14,7 +14,7 @@
             <div>
                 <p>
                     <b>Område:</b> Örebro Norr <br />
-                    <b>Inflytt:</b> 2017-06-01<br />
+                    <b>Inflytt:</b> 2017-07-01<br />
                     <b>Typ:</b> Lägenhet<br />
                     <b>Antal rum:</b> 3
                     <br /><b>Hyra:</b> 7000 kr/månad
@@ -31,6 +31,9 @@
             <div>
                 
                 <p><span style="font-size:x-large;">Övrig information</span><br /> Standard: Parkettgolv, kaklat badrum, handdukstork, tvättmaskin, torktumlare, diskmaskin, mikrovågsugn, balkong. Hiss finns.Inflytt 1 juli 2017. För intresseanmälan - se här nedan.</p>
+                <br />
+                <br />
+             
             </div>
         </div> 
         <div class=" col-md-5">
@@ -88,7 +91,7 @@
             <p><span style="font-size:large;">Norr</span><br /> <span style="font-size:small;">Norr är en stadsdel i Örebro som ligger norr om centrum. Stadsdelen sträcker sig från Norra Grev Rosengatan i söder, till Hagaby och vattentornet Svampen i norr. Det gränsar till Rynninge, Ringstorp och Pettersberg i öster, och till järnvägen Örebro-Frövi i väster.</span></p>
         </div>
         <div class="col-md-6">
-            <a href="~/Home/Intresseanmalan2" type="submit" class="btn btn-default btn-lg intresse">Intresseanmälan</a>
+            <a href="~/Home/Intresseanmalan2" type="submit" class="btn btn-default btn-lg intresse2">Intresseanmälan</a>
             
             
         </div>
