--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -116,7 +116,7 @@
             <a class="link" href="~/Home/Nyheter" style="margin-left:5%;">Se fler nyheter >></a>
         </div>
         <div class="col-md-4 facebook">
-            <h3 style="text-align: center; color: #e93523">Gilla oss på Facebook.</h3>
+            <h3 style="text-align: center; color: white;">Gilla oss på Facebook.</h3>
             <br />
             <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
         </div>
