--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -86,8 +86,8 @@
                     <center><img class="img-responsive" src="~/Content/Images/AnderssonAnnette.jpg" alt=""></center>
                     <h4>Annette Andersson</h4>
                     <p>
-                        Receptionist /<br />
-                        Bostadsförmedlare<br />
+                        Receptionist <br />
+                        Bostadsförmedlare (Örebro)<br />
                         019 - 16 43 70<br />
                         info@je-bygg.se
                     </p>
@@ -107,8 +107,8 @@
                     <h4>Carina Ottosson</h4>
                     <p>
                         Besiktningsansvarig<br>
-                        /Bostadsförmedlare<br />
-                        Kumla/Nora<br />
+                        Bostadsförmedlare<br />
+                        (Kumla/Nora)<br />
                         070 - 410 40 11
                     </p>
                 </div>
