--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -9,8 +9,10 @@
     <br />
     <br />
    <div class=" maincontainer" style=" margin-left: 40px; margin-right: 40px;">
-
+       
         <div class="row">
+            <div class="col-lg-12">
+                <div class="row">
             <div class="col-sm-3">
                 <div id="imaginary_container">
                     <div class="input-group stylish-input-group">
@@ -437,10 +439,23 @@
                    </div>
                </div>
            </div>
-
+           
+       </div>
+       <div class="col-md-3 rightdiv information">
+           <p style="font-size:large;"><b>Här hittar du de vanligaste frågorna.</b></p>
+           <h4>
+               <br />Hittar du inte svar på din fråga är du 
+               <br />välkomen att kontakta oss via e-post. 
+               <br />
+               <br />Kontaktuppgifter till oss hittar ni <a class="link" href="~/Home/Kontakt">här</a>.
+               <br />
+           </h4>
        </div>
     </div>
 </div>
+       </div>
+    </div>
+    
 
 
 
