nyckelord på om oss

--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -28,8 +28,8 @@
           
         </div>
         <div class="col-sm-4 omoss">
-            <h3>Vår affärsidé</h3>
-            <p>info info info</p>
+            <h3>Företagets nyckelord</h3>
+            <p>Byggmästarkvalitét</p>
              
             
         </div>
