--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -33,6 +33,14 @@
              
             
         </div>
+
+            <div class="col-sm-4 omoss">
+                <h3>Våra partners</h3>
+                <p>Wärna Städ och GMS i Örebro AB</p>
+
+
+
+            </div>
         <div class="col-sm-4 omoss">
             <h3>EP-Fastigheter</h3>
             <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
