tillbakaknapp på seniorboende och studentboende

--- a/design/design/Views/Home/seriorboende.cshtml
+++ b/design/design/Views/Home/seriorboende.cshtml
@@ -10,6 +10,13 @@
 
         <center>
             <div class="row">
+                <div class="col-lg-4">
+                    <a class="link" href="~/Home/Varafastigheter">Tillbaka till våra fastigheter</a>
+                </div>
+            </div>
+            <br />
+            <br />
+            <div class="row">
                 <div class="col-md-2">
 
                 </div>
