--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -8,6 +8,13 @@
 <div class="maincontainer1">
     <br />
     <br />
+    <div class="row">
+        <div class="col-lg-4">
+        <a class="link" href="~/Home/Varafastigheter">Tillbaka till våra fastigheter</a>
+            </div>
+    </div>
+    <br />
+    <br />
         <div class="row">
             <div class="col-md-6">     
                 <div class="row">
